@@ -19,6 +19,7 @@ STEPMAKE_COMPILE
 STEPMAKE_GCC(REQUIRED, 2.8)
 STEPMAKE_CXX(REQUIRED)
 STEPMAKE_GXX(REQUIRED, 2.95)
+STEPMAKE_CHECK_VERSION_UNSUPPORTED(CXX, UNSUPPORTED, 3.3)
 STEPMAKE_CXXTEMPLATE
 STEPMAKE_LIB(REQUIRED)
 STEPMAKE_BISON(REQUIRED, 1.25)
