@@ -1,3 +1,10 @@
+2003-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* configure.in: Add unsupported check for g++ >= 3.3.
+
+	* stepmake/aclocal.m4 (STEPMAKE_CHECK_VERSION_UNSUPPORTED): New
+	function (backport.)
+
 2003-05-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* scripts/ly2dvi.py (extra_init): add compat2 to latexoptions. 
